# hypre

./: .gitmodules
BUILD_SCRIPTS/alcf-builds/: cooley_clang5.0.sh  cooley_gcc7.1.0.sh  cooley_nvcc9.1_clang4.0.sh  theta_intel18.sh
BUILD_SCRIPTS/host-configs/: .hip.cmake.swp  hip.cmake
BUILD_SCRIPTS/host-configs/alcf-builds/: cooley_clang5_0.cmake  cooley_gcc7_1_0.cmake  cooley_nvcc_clang4_0.cmake  theta_intel18_0.cmake
BUILD_SCRIPTS/host-configs/lc-builds/bgqos/: clang_4_0_0.cmake
BUILD_SCRIPTS/host-configs/lc-builds/blueos/: clang_X.cmake  clangcuda_upstream_2018_12_03_nvcc_9_2.cmake  gcc_X.cmake  nvcc_clang_X.cmake  nvcc_gcc_X.cmake  nvcc_xl_2019_X.cmake  pgi_X.cmake  xl_2019_X.cmake
BUILD_SCRIPTS/host-configs/lc-builds/toss3/: clang_X.cmake  clangcuda_6_0_0_nvcc_8_0.cmake  gcc_X.cmake  icpc_X_gcc7headers.cmake  icpc_X_gcc8headers.cmake  pgi_X.cmake
BUILD_SCRIPTS/lc-builds/: .blueos_clang-coral-2018.08.08.sh.swp  .toss3_gcc8.1.0.sh.swp  bgqos_clang4.0.0.sh  blueos_clang-coral-2018.08.08.sh  blueos_clang-coral-2018.08.08_omptarget.sh  blueos_clang-upstream-2019.08.15.sh  blueos_clang-upstream-2019.08.15_omptarget.sh  blueos_clang6.0.0.sh  blueos_clang7.1.0.sh  blueos_clang8.0.1.sh  blueos_clang9.0.0.sh  blueos_clangcuda-upstream-2018.12.03_nvcc9.2.sh  blueos_gcc4.9.3.sh  blueos_gcc7.3.1.sh  blueos_gcc8.3.1.sh  blueos_nvcc10_clang-upstream-2019.08.15.sh  blueos_nvcc10_clang6.0.0.sh  blueos_nvcc10_clang7.1.0.sh  blueos_nvcc10_clang8.0.1.sh  blueos_nvcc10_clang9.0.0.sh  blueos_nvcc10_gcc7.3.1.sh  blueos_nvcc10_gcc8.3.1.sh  blueos_nvcc10_xl-2019.04.19.sh  blueos_nvcc10_xl-2019.06.12.sh  blueos_nvcc10_xl-2019.08.20.sh  blueos_nvcc10_xl-2019.12.23.sh  blueos_nvcc9_clang-coral-2018.08.08.sh  blueos_nvcc9_gcc7.3.1.sh  blueos_nvcc9_xl-2019.04.19.sh  blueos_nvcc9_xl-2019.06.12.sh  blueos_pgi19.10.sh  blueos_xl-2019.04.19.sh  blueos_xl-2019.04.19_omptarget.sh  blueos_xl-2019.06.12.sh  blueos_xl-2019.06.12_omptarget.sh  blueos_xl-2019.08.20.sh  blueos_xl-2019.08.20_omptarget.sh  blueos_xl-2019.12.23.sh  blueos_xl-2019.12.23_omptarget.sh  corona_hipcc.sh  (+13 more)
BUILD_SCRIPTS/local-builds/: generic_gcc.sh  generic_noomp_gcc.sh
src/: CMakeLists.txt
src/IJ_mv/: CMakeLists.txt  aux_parcsr_matrix.c
src/blas/: CMakeLists.txt
src/cmake/: CMakeBasics.cmake  CMakeConfigureFile.cmake  SetupCompilers.cmake
src/config/: HYPREConfig.cmake.in  HYPRE_config.h.cmake.in
src/distributed_ls/: CMakeLists.txt
src/distributed_ls/Euclid/: CMakeLists.txt
src/distributed_ls/ParaSails/: CMakeLists.txt
src/distributed_ls/pilut/: CMakeLists.txt
src/distributed_matrix/: CMakeLists.txt
src/krylov/: CMakeLists.txt
src/lapack/: CMakeLists.txt
src/matrix_matrix/: CMakeLists.txt
src/multivector/: CMakeLists.txt
src/parcsr_block_mv/: CMakeLists.txt
src/parcsr_ls/: CMakeLists.txt
src/parcsr_mv/: CMakeLists.txt  par_csr_matvec.c
src/seq_mv/: CMakeLists.txt
src/sstruct_ls/: CMakeLists.txt
src/sstruct_mv/: CMakeLists.txt
src/struct_ls/: CMakeLists.txt  pfmg_setup_rap.c  smg_setup.c  smg_setup_rap.c
src/struct_mv/: CMakeLists.txt  struct_grid.c
src/test/: CMakeLists.txt
src/utilities/: CMakeLists.txt
